[gd_scene load_steps=12 format=2]

[ext_resource path="res://menus/process_dialog.gd" type="Script" id=1]
[ext_resource path="res://ui/world_icon.jpeg" type="Texture" id=2]
[ext_resource path="res://ui/LoadingCircle.tscn" type="PackedScene" id=3]
[ext_resource path="res://menus/progress_dialog.gd" type="Script" id=4]
[ext_resource path="res://ui/dark_button.svg" type="Texture" id=5]
[ext_resource path="res://ui/fonts/notosans/NotoSans-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxTexture" id=26]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 12, 12 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0

[sub_resource type="DynamicFont" id=27]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="InputEventAction" id=29]
action = "ui_cancel"

[sub_resource type="ShortCut" id=30]
shortcut = SubResource( 29 )

[node name="ProcessDialog" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = -204.0
margin_right = 188.0
margin_bottom = 204.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 373.0
margin_bottom = 405.0
theme_type_variation = "TransparentPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 373.0
margin_bottom = 405.0
custom_constants/separation = 0

[node name="TitleBar" type="Panel" parent="PanelContainer/VBoxContainer"]
margin_right = 370.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
custom_styles/panel = SubResource( 26 )

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer/TitleBar"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
text = "Title"
align = 1
valign = 1

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/TitleBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -16.0
margin_bottom = 12.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 27 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 28 )
custom_styles/focus = SubResource( 28 )
custom_styles/disabled = SubResource( 28 )
custom_styles/normal = SubResource( 28 )
shortcut_in_tooltip = false
shortcut = SubResource( 30 )
text = "x"
flat = true

[node name="Padding" type="Control" parent="PanelContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 370.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 3 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 370.0
margin_bottom = 155.0
ratio = 1.75

[node name="WorldImage" type="TextureRect" parent="PanelContainer/VBoxContainer/AspectRatioContainer"]
unique_name_in_owner = true
margin_left = 80.0
margin_right = 290.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_vertical = 5
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Panel" type="Panel" parent="PanelContainer/VBoxContainer/AspectRatioContainer/WorldImage"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0

[node name="Padding2" type="Control" parent="PanelContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 370.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 3 )

[node name="Loading" parent="PanelContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 153.0
margin_top = 149.0
margin_right = 217.0
margin_bottom = 219.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 370.0
margin_bottom = 289.0
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="Details" type="RichTextLabel" parent="PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 4.0
margin_right = 366.0
margin_bottom = 127.0
size_flags_vertical = 3
text = "This is some testing text"

[node name="Backup" type="CheckButton" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 289.0
margin_right = 370.0
margin_bottom = 339.0
text = "Create a backup"

[node name="ProcessButton" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 339.0
margin_right = 370.0
margin_bottom = 402.0
custom_styles/panel = SubResource( 26 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/ProcessButton"]
margin_left = 3.0
margin_top = 3.0
margin_right = 367.0
margin_bottom = 60.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="Process" type="Button" parent="PanelContainer/VBoxContainer/ProcessButton/MarginContainer"]
unique_name_in_owner = true
margin_left = 6.0
margin_top = 6.0
margin_right = 358.0
margin_bottom = 51.0
theme_type_variation = "GreenButton"
text = "PROCESS"

[node name="Popup" type="PopupDialog" parent="."]
margin_left = 148.0
margin_top = 142.0
margin_right = 519.0
margin_bottom = 243.0
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Loading" parent="Popup/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = false
margin_left = 153.0
margin_top = 6.0
margin_right = 217.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="Popup/VBoxContainer"]
margin_top = 74.0
margin_right = 371.0
margin_bottom = 94.0
text = "Processing..."
align = 1

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/TitleBar/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ProcessButton/MarginContainer/Process" to="." method="_on_Process_pressed"]
